# genome-matrix-mds

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Creating_Distance_Matrixes.md  Distance_matrix_to_DBSCAN_Silhouette.ipynb  Distance_matrix_to_DBSCAN_per_class_scoring.ipynb  Distance_matrix_to_hierarchical_tree.ipynb  LICENSE  Makefile  Piper_Distance_matrix_to_MDS-E.coli.ipynb  Piper_Distance_matrix_to_MDS-Listeria.ipynb  Piper_Distance_matrix_to_MDS-Salmonella.ipynb  QUICK_START.md  README.md  Subclusters copy.ipynb  Subclusters-Copy2.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  main.py  pyproject.toml  refseq_complete.ipynb  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Data/: Genome_metadata.tsv  df_ssRNA_complete_100.tsv  df_ssRNA_complete_100_subsample.tsv  distance_group_143.txt  distance_group_44.txt  distance_group_49.txt  distance_group_51.txt  distance_group_56.txt  distance_group_65.txt
Data/Dictionaries/: Viral_parent_dict.pkl  Viral_taxID_to_rank_dict.pkl
Modules/: Distance_Matrix_DBScan.py
examples/: README.md  basic_usage.py  cli_examples.md  example_parameter_sweep.tsv  example_summary.csv
notebook_explorations/: Distance_matrix_to_DBSCAN_Silhouette.ipynb  Distance_matrix_to_DBSCAN_per_class_scoring.ipynb  Distance_matrix_to_KNN.ipynb  Distance_matrix_to_MDS.ipynb  Distance_matrix_to_MDS_Campylobacter.ipynb  Distance_matrix_to_MDS_Salmonella_real.ipynb  Distance_matrix_to_violin_plot.ipynb  Genome_veiwer_MDS.ipynb  README.md  Subclusters-Copy1.ipynb  Subclusters.ipynb
src/genome_matrix_mds/: __init__.py  cli.py  clustering.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_cli.py  test_clustering.py  test_utils.py  test_visualization.py
